--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -84,7 +84,7 @@ video {
   border: 0;
   font-size: 100%;
   font: inherit;
-  /* vertical-align: baseline; */
+  vertical-align: baseline;
   /* transform: skew(-0.01deg); */
   /* transform: skew(-0.001deg); */
 }
@@ -178,25 +178,4 @@ button {
 
 * {
   box-sizing: border-box;
-}
-
-.line01 {
-  border-top: 3px solid #1e4d9b;
-  background-color: #bfcee6;
-}
-.line02 {
-  border-top: 3px solid #d93a35;
-  background-color: #f7cbca;
-}
-.line03 {
-  border-top: 3px solid #f7cc46;
-  background-color: #eeeadc;
-}
-.line04 {
-  border-top: 3px solid #ce5f2c;
-  background-color: #fad0bd;
-}
-.line05 {
-  border-top: 3px solid #999;
-  background-color: #dfdfdf;
 }
