--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,6 +5,7 @@
 @import url("./font-embedded.css");
 @import url("./common.css");
 @import url("./layout.css");
+@import url("./lib.css");
 
 /** SAMPLE **/
 .chart-dummy.engagement {
