--- a/src/css/style.css
+++ b/src/css/style.css
@@ -600,7 +600,7 @@ body {
   width: 17%;
   /* margin-right: 45px; */
 }
-.chart-info-area .info-item:first-child {
+.chart-info-area .info-item.info-engagement {
   width: 32%;
   border-right: 1px solid #ddd;
 }
@@ -1045,13 +1045,12 @@ body {
   width: auto;
   height: auto;
   padding: 3px 10px 3px;
-  /* margin: 0 6px; */
   border: 1px solid #f1f1f1;
   border-radius: 20px;
   background-color: rgba(255, 255, 255, 0);
   color: #bbb;
   opacity: 1;
-  font-size: 14px;
+  font-size: 15px;
   font-weight: 500;
   letter-spacing: 0;
 }
@@ -1059,7 +1058,6 @@ body {
   border: 1px solid #24cd88;
   background-color: #24cd88;
   color: #fff;
-  /* font-weight: 500; */
 }
 
 .article-keyword-news .article-rank-wrap .trend-rank-wrap,
@@ -1076,8 +1074,6 @@ body {
   text-align: center;
 }
 .article-keyword-trend .trend-rank-wrap .trend-rank-list {
-  /* width: 230px; */
-  /* text-align: center; */
   text-align: left;
 }
 .trend-rank-wrap .trend-rank-list > .trend-rank-title {
@@ -1493,16 +1489,26 @@ body {
   }
   .article-engagement .chart-info-area {
     position: relative;
-    width: 65%;
-    margin-top: 55px;
+    /* width: 65%; */
+    /* margin-top: 55px; */
   }
   .chart-info-area .info-item {
     margin-right: 30px;
   }
   .chart-info-area .info-item.info-engagement {
-    position: absolute;
-    left: 0;
-    bottom: 80px;
+    /* position: absolute; */
+    /* left: 0; */
+    /* bottom: 80px; */
+    display: block;
+    width: 100%;
+    border-right: 0px;
+    border-bottom: 1px solid #ddd;
+  }
+  .chart-info-area .info-item:nth-child(n + 2):nth-child(-n + 3) {
+    width: 27%;
+  }
+  .chart-info-area .info-item:nth-child(n + 4):nth-child(-n + 5) {
+    width: 23%;
   }
 
   /* NOW page >> CHANNEL DETAILS 768px */
@@ -1626,7 +1632,7 @@ body {
     display: block;
   }
   .article-keyword-news .trend-rank-wrap .trend-rank-list h4 {
-    display: none;
+    /* display: none; */
   }
 }
 
@@ -1793,32 +1799,32 @@ body {
   }
   .article-engagement .chart-area {
     width: auto;
-    height: 254px;
+    /* height: 254px; */
     padding-bottom: 70px;
   }
   .article-engagement .chart-info-area {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    /* position: absolute; */
+    /* bottom: 0; */
+    /* left: 0; */
+    /* width: 100%; */
+    /* height: 100%; */
   }
   .article-engagement .chart-info-area > .chart-info-list {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    font-size: 0;
+    /* position: absolute; */
+    /* bottom: 0; */
+    /* left: 0; */
+    /* width: 100%; */
+    /* font-size: 0; */
   }
   .chart-info-area .info-item {
     display: inline-block;
     margin-right: 0;
   }
   .chart-info-area .info-item.info-engagement {
-    position: absolute;
-    left: unset;
-    right: 10px;
-    bottom: 130px;
+    /* position: absolute; */
+    /* left: unset; */
+    /* right: 10px; */
+    /* bottom: 130px; */
     display: block;
   }
   .chart-info-area .info-item.info-engagement > .item-title {
