--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -721,6 +721,7 @@ address > .copyright {
   right: 0;
   bottom: 0;
   left: 0;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 #showAllModal {
@@ -730,7 +731,7 @@ address > .copyright {
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.2);
+  /* background-color: rgba(0, 0, 0, 0.2); */
 }
 #showAllModal.modalOn {
   display: block;
@@ -1132,7 +1133,7 @@ address > .copyright {
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.1);
+  /* background-color: rgba(0, 0, 0, 0.1); */
 }
 #showOriginModal.modalOn {
   display: block;
@@ -1286,6 +1287,147 @@ address > .copyright {
 /** 로그인 모달 **/
 #loginModal {
   display: none;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+#loginModal.modalOn {
+  display: block;
+}
+#loginModal .modalBg {
+}
+
+.login-box {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: calc(100% - 14px);
+  max-width: 450px;
+  padding: 30px 30px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  background-color: rgba(255, 255, 255, 1);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  box-shadow: 3px 3px 12px 0px rgba(120, 120, 120, 0.1);
+  box-sizing: border-box;
+  z-index: 350;
+}
+.login-box .login-box-inner {
+  width: 100%;
+}
+
+.login-box .logo-title {
+  width: 100%;
+  text-align: center;
+}
+.login-box .logo-title a img {
+  width: 150px;
+}
+h3.logo {
+  display: inline-block;
+  padding-top: 16px;
+}
+.login-box .logo-title > a {
+  display: inline-block;
+}
+
+.login-box .login-form {
+  margin: 25px 0 0px;
+}
+
+.login-form ul {
+  margin-bottom: 30px;
+}
+
+.login-form li > input {
+  display: inline-block;
+  width: 100%;
+  height: 50px;
+  margin-bottom: 12px;
+  /* line-height: 20px; */
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 1px solid #4a4a4a;
+  font-size: 15px;
+  background-color: rgba(255, 255, 255, 0);
+  text-indent: 15px;
+  font-weight: 300;
+  border-radius: 0;
+}
+.login-form li > input:hover {
+}
+.login-form li > input:hover,
+.login-form li > input:focus {
+  border-radius: 8px;
+}
+
+.login-form .btn-wrap {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+}
+#loginBtn,
+.login-form .cancel-btn {
+  width: 48%;
+  text-align: center;
+  transition: 0.4s;
+  vertical-align: middle;
+  border-radius: 8px;
+}
+#loginBtn {
+  background-color: #24cd88;
+}
+.login-form .cancel-btn {
+  background-color: rgb(200, 200, 200);
+}
+#loginBtn > .btn,
+.login-form .cancel-btn > .btn {
+  display: block;
+  width: 100%;
+  line-height: 3;
+  font-size: 15px;
+  font-weight: 400;
+  border: none;
+  /* color: #333; */
+  color: #fff;
+  transition: 0.4s;
+}
+#loginBtn:hover {
+  background-color: #27df95;
+}
+.login-form .cancel-btn:hover {
+  background-color: rgb(214, 214, 214);
+}
+
+.login-box .info-user {
+  margin-top: 25px;
+  float: right;
+}
+.login-box .info-user > .go-join {
+  position: relative;
+  padding-right: 20px;
+  margin-right: 17px;
+}
+.login-box .info-user > .go-join::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 1px;
+  height: 12px;
+  top: 55%;
+  right: 0;
+  transform: translateY(-50%);
+  background-color: #333;
+}
+.login-box .info-user > span > a {
+  transition: 0.25s easw;
+}
+.login-box .info-user > span:hover > a {
+  font-weight: 500;
 }
 
 @media all and (max-width: 1400px) {
