--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -1306,7 +1306,7 @@ address > .copyright {
   transform: translate(-50%, -50%);
   width: calc(100% - 14px);
   max-width: 450px;
-  padding: 30px 30px;
+  padding: 40px 40px;
   border: 1px solid #ddd;
   border-radius: 8px;
   background-color: rgba(255, 255, 255, 1);
@@ -1340,13 +1340,13 @@ h3.logo {
 }
 
 .login-form ul {
-  margin-bottom: 30px;
+  /* margin-bottom: 30px; */
 }
 
 .login-form li > input {
   display: inline-block;
   width: 100%;
-  height: 50px;
+  height: 45px;
   margin-bottom: 12px;
   /* line-height: 20px; */
   box-sizing: border-box;
@@ -1354,7 +1354,7 @@ h3.logo {
   border-bottom: 1px solid #4a4a4a;
   font-size: 15px;
   background-color: rgba(255, 255, 255, 0);
-  text-indent: 15px;
+  /* text-indent: 15px; */
   font-weight: 300;
   border-radius: 0;
 }
@@ -1362,13 +1362,20 @@ h3.logo {
 }
 .login-form li > input:hover,
 .login-form li > input:focus {
-  border-radius: 8px;
+  border-radius: 0;
+  border: none;
+  border-bottom: 1px solid #0ece81;
+}
+
+.login-form .login-option > .id-remember {
+  /* float: right; */
 }
 
 .login-form .btn-wrap {
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-between;
+  margin-top: 30px;
 }
 #loginBtn,
 .login-form .cancel-btn {
