--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1974,6 +1974,8 @@ body {
     float: right;
     font-size: 13px;
     color: #8b8d91;
+    font-family: "Spoqa Han Sans Neo", "Pretendard", "Noto Sans KR",
+      Apple Gothic, "sans-serif";
   }
   .card-sub-list > .sub-item.item-icon {
     width: 100%;
@@ -2009,7 +2011,7 @@ body {
   */
 
   .card-item > .item-title-wrap {
-    margin-bottom: 8px;
+    margin-bottom: 10px;
   }
   .card-item > .item-title-wrap > .icon-area {
     float: right;
@@ -2041,12 +2043,15 @@ body {
   }
   .card-item > .item-title-wrap > .icon-area.icon-blog {
     background-image: url("../img/icon/icon-blog.svg");
+    background-size: 58%;
   }
   .card-item > .item-title-wrap > .icon-area.icon-cafe {
     background-image: url("../img/icon/icon-cafe.svg");
+    background-position: 58% center;
   }
   .card-item > .item-title-wrap > .icon-area.icon-news {
     background-image: url("../img/icon/icon-news.svg");
+    background-size: 58%;
   }
 
   .card-item .more-btn-wrap {
@@ -2055,7 +2060,7 @@ body {
   .card-item .more-btn {
     display: inline-block;
     width: 100%;
-    padding: 6px 0;
+    padding: 8px 0;
     margin-top: 14px;
     border-radius: 8px;
     border: 1px solid #ddd;
