--- a/src/css/style.css
+++ b/src/css/style.css
@@ -88,7 +88,7 @@ button:hover {
   background-color: #fff;
   border-radius: 18px;
   border: 1px solid #fdfdfd;
-  box-shadow: 1px 3px 8px rgba(150, 150, 150, 0.2);
+  box-shadow: 1px 3px 8px rgba(100, 100, 100, 0.2);
   box-sizing: border-box;
   overflow: hidden;
 }
@@ -310,6 +310,105 @@ button:hover {
   background-image: url("../img/icon/Icon-chart-bubble.svg");
 }
 
+.cont-select {
+  position: relative;
+  width: 120px;
+  height: 35px;
+  padding-left: 28px;
+  border-radius: 4px;
+  border: none;
+  font-size: 13px;
+  z-index: 2;
+  cursor: pointer;
+}
+.cont-select::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 44%;
+  left: 14px;
+  width: 6px;
+  height: 6px;
+  border-bottom: 1px solid #666;
+  border-right: 1px solid #666;
+  transform: translateY(-50%) rotate(45deg);
+  z-index: 1;
+  transition: 0.2s ease-in;
+}
+.cont-select::after {
+  content: "";
+  display: block;
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 35px;
+  width: 2px;
+  height: 100%;
+  background-color: lightcyan;
+}
+.cont-select .select-label {
+  display: flex;
+  align-items: center;
+  /* width: inherit; */
+  height: inherit;
+  border: 0 none;
+  outline: 0 none;
+  /* padding-left: 15px; */
+  background: transparent;
+  cursor: pointer;
+}
+.cont-select .option-list {
+  position: absolute;
+  top: 36px;
+  left: 0;
+  width: 100%;
+  max-height: 0;
+  padding: 0;
+  border-radius: 6px;
+  background-color: #fff;
+  overflow: hidden;
+  transition: 0, 3s ease-in;
+  box-shadow: 1px 3px 8px rgba(120, 120, 120, 0.2);
+}
+.cont-select .option-list::-webkit-scrollbar {
+  width: 6px;
+}
+.cont-select .option-list::-webkit-scrollbar-track {
+  background: transparent;
+}
+.cont-select .option-list::-webkit-scrollbar-thumb {
+  background: #303030;
+  border-radius: 45px;
+}
+.cont-select .option-list::-webkit-scrollbar-thumb:hover {
+  background: #303030;
+}
+.cont-select.active {
+  box-shadow: 1px 3px 10px rgba(120, 120, 120, 0.2);
+  z-index: 10;
+}
+.cont-select.active::before {
+  top: 58%;
+  transform: translateY(-50%) rotate(-135deg);
+}
+.cont-select.active .option-list {
+  max-height: 550px;
+}
+.cont-select .option-item {
+  /* border-bottom: 1px solid #efefef; */
+  padding: 6px 15px 6px 34px;
+  transition: -0.2s;
+}
+.cont-select .option-item:nth-child(even) {
+  /* background-color: #f5f5f5; */
+}
+.cont-select .option-item:hover {
+  background: #f1f1f1;
+}
+.cont-select .option-item:last-child {
+  border-bottom: 0 none;
+}
+
 /** HOME-PAGE **/
 body {
   height: auto;
@@ -350,6 +449,9 @@ body {
   width: 100%;
 }
 
+.intro-section .section-content .intro-search {
+  position: relative;
+}
 .intro-section .section-content .intro-search > input,
 .intro-section .section-content .intro-login > button {
   width: 100%;
@@ -374,6 +476,19 @@ body {
 .intro-section .section-content .intro-search > input::placeholder {
   color: #ccc;
   font-weight: 300;
+}
+.intro-search .search-btn {
+  position: absolute;
+  top: 50%;
+  right: 20px;
+  transform: translateY(-50%);
+  width: 32px;
+  height: 32px;
+  background-image: url("../img/icon/icon-search-24cd88.svg");
+  background-position: center;
+  background-size: 75%;
+  background-repeat: no-repeat;
+  cursor: pointer;
 }
 
 .intro-section .section-content .intro-login {
@@ -1367,9 +1482,9 @@ body {
   margin-top: 14px;
   border-radius: 10px;
   border: none;
-  background-color: #fff;
+  background-color: #f1f1f1;
   /* border: 1px solid #24cd88; */
-  border: 1px solid #ddd;
+  border: 1px solid #f1f1f1;
   /* color: #24cd88; */
   transition: 0.3s;
   text-align: center;
@@ -1447,33 +1562,53 @@ body {
   /* border: 1px solid #699ff1; */
   /* background-color: #699ff1; */
   /* border: 1px solid #aaa; */
-  border: 1px solid #bbb;
+  /* border: 1px solid #bbb; */
 }
-.channel-select .chkbox > input:checked + .chk-wrap::before {
+.channel-select .chkbox > input:checked + .chk-wrap {
   background-color: #617ff8;
 }
-.channel-select .chkbox.chkbox-sns > input:checked + .chk-wrap::before {
+.channel-select .chkbox > input:checked + .chk-wrap::before {
+  background-color: #fff;
+  border: 1px solid #fff;
+}
+.channel-select .chkbox.chkbox-sns > input:checked + .chk-wrap {
   background-color: #fd7c78;
   border: 1px solid #fd7c78;
 }
-.channel-select .chkbox.chkbox-cafe > input:checked + .chk-wrap::before {
+.channel-select .chkbox.chkbox-sns > input:checked + .chk-wrap::before {
+  background-color: #e9504b;
+}
+.channel-select .chkbox.chkbox-cafe > input:checked + .chk-wrap {
   background-color: #83e2ba;
   border: 1px solid #83e2ba;
 }
-.channel-select .chkbox.chkbox-blog > input:checked + .chk-wrap::before {
+.channel-select .chkbox.chkbox-cafe > input:checked + .chk-wrap::before {
+  background-color: #4ab689;
+}
+.channel-select .chkbox.chkbox-blog > input:checked + .chk-wrap {
   background-color: #699ff1;
   border: 1px solid #699ff1;
 }
-.channel-select .chkbox.chkbox-commu > input:checked + .chk-wrap::before {
+.channel-select .chkbox.chkbox-blog > input:checked + .chk-wrap::before {
+  background-color: #4381df;
+}
+.channel-select .chkbox.chkbox-commu > input:checked + .chk-wrap {
   background-color: #f1f169;
   border: 1px solid #f1f169;
 }
-.channel-select .chkbox.chkbox-news > input:checked + .chk-wrap::before {
+.channel-select .chkbox.chkbox-commu > input:checked + .chk-wrap::before {
+  background-color: #f1dd69;
+}
+.channel-select .chkbox.chkbox-news > input:checked + .chk-wrap {
   background-color: #f19f69;
   border: 1px solid #f19f69;
 }
+.channel-select .chkbox.chkbox-news > input:checked + .chk-wrap::before {
+  background-color: #e7803b;
+}
 .channel-select .chkbox > input:checked + .chk-wrap + .chk-txt {
   color: #444;
+  color: #fff;
 }
 
 .hottest-wide-list .hottest-item > .contents-area {
